--- a/src/main/resources/templates/fragments/asistenciacapacitacion/asistenciacapacitaciones.html
+++ b/src/main/resources/templates/fragments/asistenciacapacitacion/asistenciacapacitaciones.html
@@ -21,7 +21,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
             <table class="table table-striped">
                 <tr>
                     <th>Codigo de Asistencia de Capacitacion</th>
-                     <th>Capacitacion</th>
+                     <th>Capacitación</th>
                       <!--<th>Empleado</th>-->
                        <!--<th>Puesto</th>-->
                         <th>Ubicacion Fisica</th>
