--- a/src/main/resources/templates/fragments/capacitacion/capacitaciones.html
+++ b/src/main/resources/templates/fragments/capacitacion/capacitaciones.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head lang="en">
+    <!--<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>-->
      <th:block th:include="../templates/header"></th:block>
     <title>Capacitaciones</title>
    
@@ -27,22 +28,22 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
       
         <table class="table table-striped">
             <tr>
-                <th>Codigo</th>
+                <th>Código</th>
                 <th>Nombre</th>
-                <th>Descripcion</th>
-                <th>Categoria</th>
-                <th>Descripcion Cat</th>
+                <th>Descripción</th>
+                <th>Categoría</th>
+                <th>Descripción Categoría</th>
                 <th>Departamento Responsable</th>
-                <th>N horas</th>
-                <th>N Dias</th>
+                <th>Nº horas</th>
+                <th>Nº Días</th>
                 <th>Patrocinador</th>
                 <th>Tipo de Evento</th>
                 <th>Especialidad</th>
-                <th>Pais Capacitacion</th>
-                <th>Fecha Capacitacion Desde</th>
-                <th>Fecha Capacitacion Hasta</th>
-                <th>Tipo Capacitacion</th>
-                <th>Estado Capacitacion</th>
+                <th>País Capacitación</th>
+                <th>Fecha Capacitación Desde</th>
+                <th>Fecha Capacitación Hasta</th>
+                <th>Tipo Capacitación</th>
+                <th>Estado Capacitación</th>
                 <th>Nombre Capacitador</th>
                <th>Acciones</th>
                 
