--- a/src/main/resources/templates/fragments/capacitador/capacitadores.html
+++ b/src/main/resources/templates/fragments/capacitador/capacitadores.html
@@ -22,9 +22,9 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                 <th>Responsable del Capacitador</th>
                 <th>Nombre de Capacitador</th>
                 <th>Tema Dominio</th>
-                <th>Institucion</th>
+                <th>Institución</th>
                 <th>Tipo Capacitador</th>
-                <th>Tipo Agrupacion</th>
+                <th>Tipo Agrupación</th>
                   <th>Dui</th>
                   <th>Nit</th>
                   <th>Carnet Residente</th>
@@ -35,14 +35,14 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                   <th>Acciones</th>
             </tr>
             <tr th:each="capacitador : ${capacitadores}">
-                <td th:text="${capacitador.codigocapacitador}">Codigo</td>
+                <td th:text="${capacitador.codigocapacitador}">Código</td>
                  <td th:text="${capacitador.codigoempleado.nombreempleado}">Codigo</td>
                 
                 <td th:text="${capacitador.nombrecapacitador}">Nombre</td>
                 <td th:text="${capacitador.temadominio}">Tema</td>
-                <td th:text="${capacitador.institucioncapacitador}">Institucion</td>
+                <td th:text="${capacitador.institucioncapacitador}">Institución</td>
                 <td th:text="${capacitador.tipocapacitador}">Tipo Capacitador</td>
-                 <td th:text="${capacitador.tipoagrupacion}">Tipo Agrupacion</td>
+                 <td th:text="${capacitador.tipoagrupacion}">Tipo Agrupación</td>
                 <td th:text="${capacitador.duicapacitador}">Dui</td>
                 <td th:text="${capacitador.nitcapacitador}">Nit</td>
                 <td th:text="${capacitador.carnetresidencia}">Carnet</td>
