--- a/src/main/resources/templates/fragments/capacitador/capacitadorform.html
+++ b/src/main/resources/templates/fragments/capacitador/capacitadorform.html
@@ -64,7 +64,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                     </div>
                    
                     <div class="form-group">
-                        <label class="col-sm-2 control-label">Institucion(*):</label>
+                        <label class="col-sm-2 control-label">Institución(*):</label>
                         <div class="col-sm-4">
 
                             <select class="form-control" required="true" name="institucioncapacitador" >
@@ -88,7 +88,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                         </div>
                     </div>
                     <div class="form-group">
-                        <label class="col-sm-2 control-label">Tipo Agrupacion(*):</label>
+                        <label class="col-sm-2 control-label">Tipo Agrupación(*):</label>
                         <div class="col-sm-4">
 
                             <select class="form-control" required="true"name="tipoagrupacion" >
