--- a/src/main/resources/templates/fragments/costocapacitacion/costocapacitacionform.html
+++ b/src/main/resources/templates/fragments/costocapacitacion/costocapacitacionform.html
@@ -3,7 +3,7 @@
   
 <head lang="en">
 
-    <title>Crear Costo de Capacitacion</title>
+    <title>Crear Costo de Capacitación</title>
   <th:block th:include="../templates/header"></th:block>
  
   </head>
@@ -25,7 +25,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
           <div class="row text-center">
                         <img src="../../static/image/costo.png" width="200" th:src="@{/image/costo.png}"/>
     
-          <h3 align="center"> Crear Costos de Capacitacion</h3>
+          <h3 align="center"> Crear Costos de Capacitación</h3>
     <div>
         <form class="form-horizontal" th:object="${costocapacitacion}" th:action="@{../costocapacitacion}" method="post">
           <input type="hidden" th:field="*{codigocostocapacitacion}"/>
@@ -51,10 +51,10 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                 </div>
             </div>
             <div class="form-group">
-                <label class="col-sm-2 control-label">Capacitacion:</label>
+                <label class="col-sm-2 control-label">Capacitación:</label>
                 <div class="col-sm-10">
                     <select class="form-control" th:field="*{codigocapacitacion.codigocapacitacion}" >
-                         <option value="0">-- Seleccione la Capacitacion --</option>
+                         <option value="0">-- Seleccione la Capacitación --</option>
                                 <option th:each="c:${capacitaciones}" th:value="${c.codigocapacitacion}" th:text="${c.nombrecapacitacion}"></option>
                             </select>
                     <!--<input type="number" class="form-control" th:field="*{codigocapacitacion.codigocapacitacion}"/>-->
