--- a/src/main/resources/templates/fragments/diagnosticocapacitacion/diagnosticocapacitaciones.html
+++ b/src/main/resources/templates/fragments/diagnosticocapacitacion/diagnosticocapacitaciones.html
@@ -16,13 +16,13 @@
                     <table class="table table-striped">
                         <tr>
                              <th>Codigo Diagnostico</th>
-                              <th>Nombre Capacitacion</th>
-                            <th>Nombre Direccion</th>
-                            <th>Necesidad de Capacitacion</th>
+                              <th>Nombre Capacitación</th>
+                            <th>Nombre Dirección</th>
+                            <th>Necesidad de Capacitación</th>
                            
 <!--                            <th>Que Mes es mas oportuno</th>
-                            <th>Anio dejecucion</th>
-                            <th>Personal que recibira Capacitacion</th>
+                            <th>Años dejecucion</th>
+                            <th>Personal que recibira Capacitación</th>
                             <th>Resultado que desea Obtener</th>
                             <th>Nombre de quien Autoriza</th>
                             <th>Cargo de quien Autoriza</th>-->
