--- a/src/main/resources/templates/fragments/evaluacioncapacitacion/evaluacioncapacitaciones.html
+++ b/src/main/resources/templates/fragments/evaluacioncapacitacion/evaluacioncapacitaciones.html
@@ -27,26 +27,26 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
       
         <table class="table table-striped">
             <tr>
-                <th>Codigo Capacitacion</th>
+                <th>Codigo Capacitación</th>
                 <th>Lugar Evaluacion</th>
                 <th>Hora</th>
                 <th>Dominio Tema</th>
-<!--                <th>Habilidad Comunicacion</th>
+<!--                <th>Habilidad Comunicación</th>
                 <th>Llena sus Espectativas</th>-->
 <!--                <th>Contenido se desarrolla con claridad</th>
                 <th>Aclara Dudas</th>
                 <th>Mantiene el Interes del Tema</th>
-                <th>Satisfaccion en el Tema</th>
-                <th>Comprension del Tema</th>-->
-<!--                <th>Planeacion del tema</th>
-                <th>Distribucion de tiempo</th>
+                <th>Satisfacción en el Tema</th>
+                <th>Comprensión del Tema</th>-->
+<!--                <th>Planeación del tema</th>
+                <th>Distribución de tiempo</th>
                 <th>Contenido Claro</th>
                 <th>Contenido aplicado a su trabajo</th>
                 <th>Satisfecho con el contenido</th>
-                <th>Es necesaria la Capacitacion</th>
+                <th>Es necesaria la Capacitación</th>
                   <th>Tecnologia Adecuada</th>
                     <th>Material Apropiado</th>
-                      <th>Tiempo Capacitacion Optimo</th>
+                      <th>Tiempo Capacitación Optimo</th>
                       <th>Comentario o Sugerencia</th>
                       <th>Puntualidad en Fecha y Hora</th>-->
                       
