--- a/src/main/resources/templates/fragments/inasistencia/inasistencias.html
+++ b/src/main/resources/templates/fragments/inasistencia/inasistencias.html
@@ -27,12 +27,12 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
       
         <table class="table table-striped">
             <tr>
-                <th>Codigo inasistencia</th>
+                <th>Código inasistencia</th>
                 <th>Nombre Empleado</th>
                 <th>Motivo Inasistencia</th>
-                <th>Justificacion</th>
+                <th>Justificación</th>
                 <th>Fecha Desde</th>
-                <th>FechaHasta</th>
+                <th>Fecha Hasta</th>
                
                <th>Acciones</th>
                 
@@ -41,7 +41,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                 <td th:text="${inasistencia.codigoinasistencia}">Codigo</td>
                 <td th:text="${inasistencia.codigoempleado.nombreempleado}">Nombre</td>
                 <td th:text="${inasistencia.motivoinasistencia}">Motivo</td>
-                <td th:text="${inasistencia.constanciainasistencia}">Justificacion</td>
+                <td th:text="${inasistencia.constanciainasistencia}">Justificación</td>
                 <td th:text="${inasistencia.fechadesdeinasistencia}"> Desde</td>
                 <td th:text="${inasistencia.fechahastainasistencia}"> Hasta</td>
               
