--- a/src/main/resources/templates/fragments/incapacidad/incapacidades.html
+++ b/src/main/resources/templates/fragments/incapacidad/incapacidades.html
@@ -41,7 +41,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
 <!--                            <th>Diagnostico</th>-->
 <!--                            <th>Subir Formulario</th>
                             <th>Subir Documento</th>-->
-                              <th>Accion</th>
+                              <th>Acciones</th>
 
                         </tr>
             <tr th:each="incapacidad : ${incapacidades}">
