--- a/src/main/resources/templates/fragments/mision/misiones.html
+++ b/src/main/resources/templates/fragments/mision/misiones.html
@@ -18,7 +18,7 @@
         <h3 align="center">Listado de Misiones</h3>
         <table class="table table-striped">
             <tr >
-                <th>Codigo de Mision</th>
+                <th>Codigo de Misio&acuten</th>
                 <th>Nombre de  Mision</th>
                 <th>Objetivo de Mimsion</th>
                 <th>Responsable del Gasto </th>
