--- a/src/main/resources/templates/fragments/nivelescolaridad/nivelescolaridades.html
+++ b/src/main/resources/templates/fragments/nivelescolaridad/nivelescolaridades.html
@@ -27,13 +27,13 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
         <table class="table table-striped">
             <tr>
                 <th>Centro Educativo</th>
-                <th>anios aprobados</th>
+                <th>Años aprobados</th>
                   <th>Estudios realizados</th>
                  <th>Finalizado</th>
                   <th>titulo obtenido</th>
-                   <th>Pais del nivel escolar</th>
-                   <th>Fecha desde</th>
-                   <th>Fecha hasta</th>
+                   <th>País del nivel escolar</th>
+                   <th>Fecha Desde</th>
+                   <th>Fecha Hasta</th>
                    <th>Acciones</th>
                    
                 
