--- a/src/main/resources/templates/fragments/nivelescolaridad/nivelescolaridadshow.html
+++ b/src/main/resources/templates/fragments/nivelescolaridad/nivelescolaridadshow.html
@@ -19,55 +19,55 @@
         <div>
             <form class="form-horizontal">
                 <div class="form-group">
-              <label class="col-sm-2 control-label">codigo:</label>
+              <label class="col-sm-2 control-label">Codigo:</label>
                     <div class="col-sm-10">
                         <p class="form-control-static" th:text="${nivelescolaridad.codigonivelnivelescolaridad}">codigo nivel escolaridad</p></div>
                 </div>
                 <div class="form-group">
-                    <label class="col-sm-2 control-label">Centro educativo:</label>
+                    <label class="col-sm-2 control-label">Centro Educativo:</label>
                     <div class="col-sm-10">
                         <p class="form-control-static" th:text="${nivelescolaridad.centroeducativo}">Centro educativo</p>
                     </div>
                 </div>
                 <div class="form-group">
-                    <label class="col-sm-2 control-label">anios aprobados:</label>
+                    <label class="col-sm-2 control-label">Años Aprobados:</label>
                     <div class="col-sm-10">
                         <p class="form-control-static" th:text="${nivelescolaridad.aniosaprobados}">anios aprobados</p>
                     </div>
                 </div>
                  <div class="form-group">
-                    <label class="col-sm-2 control-label">estudios realizados:</label>
+                    <label class="col-sm-2 control-label">Estudios Realizados:</label>
                     <div class="col-sm-10">
                         <!-- aqui presenta probremas de parceo en estudios realizados-->
                    <!--<p class="form-control-static" th:text="${nivelescolaridad.estudiorealizado">estudiorealizado</p>-->
                     </div>
                 </div>
                  <div class="form-group">
-                    <label class="col-sm-2 control-label">finalizado:</label>
+                    <label class="col-sm-2 control-label">Finalizado:</label>
                     <div class="col-sm-10">
                         <p class="form-control-static" th:text="${nivelescolaridad.finalizado}">Finalizado</p>
                     </div>
                 </div>
                  <div class="form-group">
-                    <label class="col-sm-2 control-label">titulo Obtenido:</label>
+                    <label class="col-sm-2 control-label">Titulo Obtenido:</label>
                     <div class="col-sm-10">
                         <p class="form-control-static" th:text="${nivelescolaridad.tituloobtenido}">titulo obtenido</p>
                     </div>
                 </div>
                  <div class="form-group">
-                    <label class="col-sm-2 control-label">Pais Nivel escolardiad:</label>
+                    <label class="col-sm-2 control-label">País Nivel Escolardiad:</label>
                     <div class="col-sm-10">
                         <p class="form-control-static" th:text="${nivelescolaridad.paisnivelescolaridad}">Pais </p>
                     </div>
                 </div>
                  <div class="form-group">
-                    <label class="col-sm-2 control-label">fecha desde:</label>
+                    <label class="col-sm-2 control-label">Fecha Desde:</label>
                     <div class="col-sm-10">                      <p class="form-control-static" th:text="${#dates.format(nivelescolaridad.fechadesdenivelescolaridad, 'dd-MMM-yyyy')}">Fecha desde</p>
                     </div>
                 </div>
                 
                 <div class="form-group">
-                    <label class="col-sm-2 control-label">Fecha desde:</label>
+                    <label class="col-sm-2 control-label">Fecha Hasta:</label>
                     <div class="col-sm-10">
                        <p class="form-control-static" th:text="${#calendars.format(nivelescolaridad.fechahastanivelescolaridad, 'dd-MMM-yyyy')}">fecha hasta</p>
                     </div>
