--- a/src/main/resources/templates/fragments/asistenciacapacitacion/asistenciacapacitacionshow.html
+++ b/src/main/resources/templates/fragments/asistenciacapacitacion/asistenciacapacitacionshow.html
@@ -14,17 +14,17 @@
             <th:block th:include="../templates/menu"></th:block>
         </div>
         <div class="col-md-8">
-            <h3 align="center">Consulta de Asistencias de Capacitacion</h3>
+            <h3 align="center">Detalle de Asistencia Capacitación</h3>
             <div>
                 <form class="form-horizontal">
                     <div class="col-md-6">
                         <div class="form-group">
-                            <label class="col-sm-5 control-label">codigo:</label>
+                            <label class="col-sm-5 control-label">código:</label>
                             <div class="col-sm-7">
                                 <p class="form-control-static" th:text="${asistenciacapacitacion.codigoasistenciacapacitacion}">codigo de comite</p></div>
                         </div>
                           <div class="form-group">
-                            <label class="col-sm-5 control-label">codigoempleado:</label>
+                            <label class="col-sm-5 control-label">códigoempleado:</label>
                             <div class="col-sm-7">
                                 <p class="form-control-static" th:text="${asistenciacapacitacion.codigoempleado}">codigo de comite</p></div>
                         </div>
@@ -40,18 +40,18 @@
                             </div>
                         </div>
                         <div class="form-group">
-                            <label class="col-sm-5 control-label">Ubicacion Fisica de Capacitacion:</label>
+                            <label class="col-sm-5 control-label">Ubicación Física de Capacitacion:</label>
                             <div class="col-sm-7">
                                 <p class="form-control-static" th:text="${asistenciacapacitacion.ubicacionasistenciacapacitacion}">Ubicacion Fisica de Capacitacion</p>
                             </div>
                         </div>
                         <div class="form-group">
-                            <label class="col-sm-5 control-label">Capacitacion:</label>
+                            <label class="col-sm-5 control-label">Capacitación:</label>
                             <div class="col-sm-7">
                                 <p class="form-control-static" th:text="${asistenciacapacitacion.codigocapacitacion.nombrecapacitacion}">Codigo de Capacitacion</p>
                             </div>
                              <div class="form-group">
-                            <label class="col-sm-5 control-label">Ubicacion fisica:</label>
+                            <label class="col-sm-5 control-label">Ubicación fisíca:</label>
                             <div class="col-sm-7">
                                 <p class="form-control-static" th:text="${asistenciacapacitacion.ubicacionasistenciacapacitacion}">Ubicacion Fisica de Capacitacion</p>
                             </div>
