--- a/src/main/resources/templates/fragments/capacitador/capacitadorshow.html
+++ b/src/main/resources/templates/fragments/capacitador/capacitadorshow.html
@@ -19,7 +19,7 @@
             <form class="form-horizontal">
 
                 <div class="form-group">
-                    <label class="col-sm-2 control-label">Codigo capacitador:</label>
+                    <label class="col-sm-2 control-label">Código capacitador:</label>
                     <div class="col-sm-10">
                         <p class="" th:text="${capacitador.codigocapacitador}">codigo capacitador</p></div>
                     <!--<p class="" th:text="${capacitador.codigoempleado.nombreempleado}">codigo capacitador</p></div>-->
@@ -44,9 +44,9 @@
                     </div>
                 </div>
                          <div class="form-group">
-                    <label class="col-sm-2 control-label">Institucion:</label>
+                    <label class="col-sm-2 control-label">Institución:</label>
                     <div class="col-sm-10">
-                        <p class="" th:text="${capacitador.institucioncapacitador}">Institucion</p>
+                        <p class="" th:text="${capacitador.institucioncapacitador}">Institución</p>
                     </div>
                 </div>
                 <div class="form-group">
@@ -56,9 +56,9 @@
                     </div>
                 </div>
                      <div class="form-group">
-                    <label class="col-sm-2 control">Tipo Agrupacion:</label>
+                    <label class="col-sm-2 control">Tipo Agrupación:</label>
                     <div class="col-sm-10">
-                        <p class="" th:text="${capacitador.tipoagrupacion}">Tipo Capacitador</p>
+                        <p class="" th:text="${capacitador.tipoagrupacion}">Tipo Agrupación</p>
                     </div>
                 </div>
                 <div class="form-group">
