--- a/src/main/resources/templates/fragments/comite/comiteform.html
+++ b/src/main/resources/templates/fragments/comite/comiteform.html
@@ -41,7 +41,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                 </div>
             </div>-->
             <div class="form-group">
-                <label class="col-sm-2 control-label">Nombre de comite:</label>
+                <label class="col-sm-2 control-label">Nombre de Comite:</label>
                 <div class="col-sm-10">
                     <input type="text" class="form-control" size="30" maxlength="30" required="true" placeholder="Escriba El nombre del Comite"  th:field="*{nombrecomite}"/>
                 </div>
@@ -63,13 +63,13 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
             </div>-->
             
             <div class="form-group">
-                <label class="col-sm-2 control-label ">Descripcion:</label>
+                <label class="col-sm-2 control-label ">Descripción:</label>
                 <div class="col-sm-10">
                     <input type="text" class="form-control"required="true" size="100" maxlength="100" placeholder="Escriba la Descripcion del comite" th:field="*{desripcioncomite}"/>
                 </div>
             </div>
             <div class="form-group">
-                <label class="col-sm-2 control-label">Numero de acuerdo:</label>
+                <label class="col-sm-2 control-label">Numero de Acuerdo:</label>
                 <div class="col-sm-10">
                     <input type="text" class="form-control numeros" required="true" placeholder="Escriba solo Numeros Positivos"  th:field="*{numeroacuerdocomite}"/>
                 </div>
