--- a/src/main/resources/templates/fragments/comite/comiteshow.html
+++ b/src/main/resources/templates/fragments/comite/comiteshow.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
     <head lang="en">
 
-        <title>SISADMRH-Detalle de comites</title>
+        <title>Detalle de Comite</title>
     <th:block th:include="../templates/header"></th:block>
 
 
@@ -14,12 +14,12 @@
             <th:block th:include="../templates/menu"></th:block>
         </div>
         <div class="col-md-8">
-            <h3 align="center">Consulta de Datos de comite</h3>
+            <h3 align="center">Consulta de Datos de Comite</h3>
             <div>
                 <form class="form-horizontal">
                     <div class="col-md-6">
                         <div class="form-group">
-                            <label class="col-sm-5 control-label">codigo de Comite:</label>
+                            <label class="col-sm-5 control-label">código de Comite:</label>
                             <div class="col-sm-7">
                                 <p class="form-control-static" th:text="${comite.codigocomite}">codigo de comite</p></div>
                         </div>
@@ -36,7 +36,7 @@
                             </div>
                         </div>-->
                         <div class="form-group">
-                            <label class="col-sm-5 control-label">Nombre de comite:</label>
+                            <label class="col-sm-5 control-label">Nombre de Comite:</label>
                             <div class="col-sm-7">
                                 <p class="form-control-static" th:text="${comite.nombrecomite}">Nombre de comite</p>
                             </div>
@@ -48,36 +48,36 @@
                             </div>
                         </div>
                         <div class="form-group">
-                            <label class="col-sm-5 control-label">desripcioncomite:</label>
+                            <label class="col-sm-5 control-label">Desripción de Comite:</label>
                             <div class="col-sm-7">
-                                <p class="form-control-static" th:text="${comite.desripcioncomite}">desripcioncomite</p>
+                                <p class="form-control-static" th:text="${comite.desripcioncomite}">Desripción de Comite</p>
                             </div>
                         </div>
                         <div class="form-group">
-                            <label class="col-sm-5 control-label">desripcioncomite:</label>
+                            <label class="col-sm-5 control-label">Numero de Acuerdo:</label>
                             <div class="col-sm-7">
-                                <p class="form-control-static" th:text="${comite.numeroacuerdocomite}">numeroacuerdocomite</p>
-                            </div>
-                        </div>
-
-                        <div class="form-group">
-                            <label class="col-sm-5 control-label">miembromaximo:</label>
-                            <div class="col-sm-7">
-                                <p class="form-control-static" th:text="${comite.miembromaximo}">miembromaximo</p>
+                                <p class="form-control-static" th:text="${comite.numeroacuerdocomite}">Numero de Acuerdo</p>
                             </div>
                         </div>
 
                         <div class="form-group">
-                            <label class="col-sm-5 control-label">fechadesdecomite:</label>
+                            <label class="col-sm-5 control-label">Miembros Maximos:</label>
                             <div class="col-sm-7">
-                                <p class="form-control-static" th:text="${comite.fechadesdecomite}">fechadesdecomite</p>
+                                <p class="form-control-static" th:text="${comite.miembromaximo}">Miembros Maximos</p>
                             </div>
                         </div>
 
                         <div class="form-group">
-                            <label class="col-sm-7 control-label">Fecha hasta comite:</label>
+                            <label class="col-sm-5 control-label">Fecha Desde:</label>
+                            <div class="col-sm-7">
+                                <p class="form-control-static" th:text="${comite.fechadesdecomite}">Fecha Desde</p>
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <label class="col-sm-7 control-label">Fecha hasta :</label>
                             <div class="col-sm-5">
-                                <p class="form-control-static" th:text="${comite.fechahastacomite}">Fecha hasta </p>
+                                <p class="form-control-static" th:text="${comite.fechahastacomite}">Fecha Hasta </p>
                             </div>
                         </div>
                         
