--- a/src/main/resources/templates/fragments/diagnosticocapacitacion/diagnosticocapacitacionform.html
+++ b/src/main/resources/templates/fragments/diagnosticocapacitacion/diagnosticocapacitacionform.html
@@ -19,25 +19,25 @@
             <h3 align="center" >Crear Diagnostico</h3>
             <div>
                 <form class="form-horizontal" th:object="${diagnosticocapacitacion}" th:action="@{../diagnosticocapacitacion}" method="post">
-    
+           <input type="hidden" th:field="*{codigodiagnosticocapacitacion}"/>
                 <div class="form-group">
-                <label class="col-sm-5 control-label">Capacitacion:</label>
+                <label class="col-sm-5 control-label">Capacitación:</label>
                 <div class="col-sm-7">
                     <select class="form-control" th:field="*{codigocapacitacion.codigocapacitacion}" >
-                         <option value="0">-- Seleccione la Capacitacion --</option>
+                         <option value="0">-- Seleccione la Capacitación --</option>
                                 <option th:each="c:${capacitaciones}" th:value="${c.codigocapacitacion}" th:text="${c.nombrecapacitacion}"></option>
                             </select>
                     <!--<input type="number" class="form-control" th:field="*{codigocapacitacion.codigocapacitacion}"/>-->
                 </div>
             </div>
                <div class="form-group">  
-           <label class="col-sm-5 control-label">Nombre Direccion:</label>
+           <label class="col-sm-5 control-label">Nombre Dirección:</label>
                 <div class="col-sm-7">
                      <select class="form-control" name="direccion" >
                                     <option>Recursos Humanos</option>
                                     <option>Finanzzas</option>
                                     <option>Jurisprudencia</option>
-                                    <option>Investigacion Secreta</option>
+                                    <option>Investigación Secreta</option>
                                       <option>Economia</option>
                                        <option>Relaciones Diplomaticas</option>
                                 </select>
@@ -45,7 +45,7 @@
                 </div>
             </div>
                       <div class="form-group">
-                        <label class="col-sm-5 control-label">Necesidad de Capacitacion que tendra:</label>
+                        <label class="col-sm-5 control-label">Necesidad de Capacitación que tendra:</label>
                         <div class="col-sm-7">
                             <input type="text" class="form-control" size="50" maxlength="50" required="true" placeholder=""  th:field="*{necesidadcapacitacion}"/>
                         </div>
