--- a/src/main/resources/templates/fragments/diagnosticocapacitacion/diagnosticocapacitacionshow.html
+++ b/src/main/resources/templates/fragments/diagnosticocapacitacion/diagnosticocapacitacionshow.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
     <head lang="en">
 
-        <title>SISADMRH-Detalle de comites</title>
+        <title>Detalle de Diagnostico de Capacitaciones</title>
     <th:block th:include="../templates/header"></th:block>
 
 
@@ -14,49 +14,49 @@
             <th:block th:include="../templates/menu"></th:block>
         </div>
         <div class="col-md-8">
-            <h3 align="center">Consulta de Diagnosticos de Capacitacion</h3>
+            <h3 align="center">Detalle de Diagnostico de Capacitación</h3>
             <div>
                 <form class="form-horizontal">
                     <div class="col-md-6">
                         <div class="form-group">
-                            <label class="col-sm-5 control-label">codigo de Diagnostico de Capacitacion:</label>
+                            <label class="col-sm-5 control-label">Código de Diagnostico de Capacitación:</label>
                             <div class="col-sm-7">
                                 <p class="form-control-static" th:text="${diagnosticocapacitacion.codigodiagnosticocapacitacion}">codigo de Diagnostico</p></div>
                         </div>
                         <div class="form-group">
-                            <label class="col-sm-5 control-label">Nombre de Capacitacion:</label>
+                            <label class="col-sm-5 control-label">Nombre de Capacitación:</label>
                             <div class="col-sm-7">
                                 <p class="form-control-static" th:text="${diagnosticocapacitacion.codigocapacitacion.nombrecapacitacion}">DUI</p>
                             </div>
                         </div>
                         
                         <div class="form-group">
-                            <label class="col-sm-5 control-label">Direccion:</label>
+                            <label class="col-sm-5 control-label">Dirección:</label>
                             <div class="col-sm-7">
                                 <p class="form-control-static" th:text="${diagnosticocapacitacion.direccion}">DUI</p>
                             </div>
                         </div>
                         
                         <div class="form-group">
-                            <label class="col-sm-5 control-label">Necesidad de Capacitacion</label>
+                            <label class="col-sm-5 control-label">Necesidad de Capacitación</label>
                             <div class="col-sm-7">
                                 <p class="form-control-static" th:text="${diagnosticocapacitacion.necesidadcapacitacion}">Necesidad de Capacitacion</p>
                             </div>
                         </div>
                         <div class="form-group">
-                            <label class="col-sm-5 control-label">Que Mes es mas oportuno:</label>
+                            <label class="col-sm-5 control-label">Que Mes es mas Oportuno:</label>
                             <div class="col-sm-7">
                                 <p class="form-control-static" th:text="${diagnosticocapacitacion.mescapacitacion}">Que Mes es mas oportuno</p>
                             </div>
                         </div>
                         <div class="form-group">
-                            <label class="col-sm-5 control-label">Anio dejecucion:</label>
+                            <label class="col-sm-5 control-label">Año dejecución:</label>
                             <div class="col-sm-7">
                                 <p class="form-control-static" th:text="${diagnosticocapacitacion.anioejecucion}">Anio dejecucion</p>
                             </div>
                         </div>
                         <div class="form-group">
-                            <label class="col-sm-5 control-label">Personal que recibira Capacitacion:</label>
+                            <label class="col-sm-5 control-label">Personal que recibira Capacitación:</label>
                             <div class="col-sm-7">
                                 <p class="form-control-static" th:text="${diagnosticocapacitacion.personalrecibir}">Personal que recibira Capacitacion</p>
                             </div>
