--- a/src/main/resources/templates/fragments/inasistencia/inasistenciashow.html
+++ b/src/main/resources/templates/fragments/inasistencia/inasistenciashow.html
@@ -19,7 +19,7 @@
             <form class="form-horizontal">
 
                 <div class="form-group">
-                    <label class="col-sm-2 control-label">codigo inasistencia:</label>
+                    <label class="col-sm-2 control-label">Código inasistencia:</label>
                     <div class="col-sm-10">
                         <p class="" th:text="${inasistencia.codigoinasistencia}">codigo inasistencia</p></div>
                     <!--<p class="" th:text="${capacitador.codigoempleado.nombreempleado}">codigo capacitador</p></div>-->
@@ -30,13 +30,20 @@
                         <p class="" th:text="${inasistencia.codigoempleado.nombreempleado}">Empleado</p>
                     </div>
                 </div>
-  <div class="form-group">
-                                    <label class="col-sm-2 control-label">Justiciacion</label>
-                                    <div class="col-sm-10">
-                                        <p class="form-control-static" th:text="${inasistencia.constanciainasistencia}">justiticacion</p>
-                                         <!--<p class="form-control-static" th:text="${capacitador.codigoempleado.codigoempleado}">Codigo Empleado</p>-->
-                                    </div>
-                                </div>
+                <div class="form-group">
+                    <label class="col-sm-2 control-label">Motivo de Inasistencia</label>
+                    <div class="col-sm-10">
+                        <p class="form-control-static" th:text="${inasistencia.motivoinasistencia}">justiticacion</p>
+                        <!--<p class="form-control-static" th:text="${capacitador.codigoempleado.codigoempleado}">Codigo Empleado</p>-->
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="col-sm-2 control-label">Justiciación</label>
+                    <div class="col-sm-10">
+                        <p class="form-control-static" th:text="${inasistencia.constanciainasistencia}">justiticacion</p>
+                        <!--<p class="form-control-static" th:text="${capacitador.codigoempleado.codigoempleado}">Codigo Empleado</p>-->
+                    </div>
+                </div>
                 
                         <div class="form-group">
                     <label class="col-sm-2 control-label">Fecha Desde:</label>
