--- a/src/main/resources/templates/fragments/nivelescolaridad/nivelescolaridadform.html
+++ b/src/main/resources/templates/fragments/nivelescolaridad/nivelescolaridadform.html
@@ -47,13 +47,13 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                 </div>
             </div>
             <div class="form-group">
-                <label class="col-sm-2 control-label">Anos aprobados:</label>
+                <label class="col-sm-2 control-label">Años aprobados:</label>
                 <div class="col-sm-10">
                     <input type="text" class="form-control numeros" maxlength="2"th:field="*{aniosaprobados}"/>
                 </div>
             </div>
              <div class="form-group">
-                <label class="col-sm-2 control-label">Pais Nivel escolaridad:</label>
+                <label class="col-sm-2 control-label">País Nivel escolaridad:</label>
                 <div class="col-sm-10">
                     <input type="text" class="form-control" required="true" size="50" maxlength="50" th:field="*{paisnivelescolaridad}"/>
                 </div>
